MicroRabbit/book-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: book-api-deployment
   labels:
      app: bookapi
spec:
   replicas: 1
   selector:
      matchLabels:
         app: bookapi
   template:
      metadata:
         labels:
            app: bookapi
      spec:
         containers:
            - name:  microrabbitbooksapi
              image: tamarabinnun/microrabbitbooksapi
              ports:
              - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
   name: book-api-nodeport
spec:
   type: NodePort
   ports:
      - port: 80
        targetPort: 80   
        nodePort: 30000
   selector:
      app: bookapi
---
apiVersion: v1
kind: Service
metadata:
   name: book-api-clusterip
spec:
   type: ClusterIP
   ports:
      - port: 80
        targetPort: 80
   selector:
      app: bookapi
