MicroRabbit/book-mssql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-mssql-deployment
  labels:
    app: bookmssql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookmssql
  template:
    metadata:
      labels:
        app: bookmssql
    spec:
      containers:
      - name: mssql
        image: mcr.microsoft.com/mssql/server:2022-latest #creating a container from this image, with empty data. server name:"localhost,1433"
        ports:
        - containerPort: 1433
        volumeMounts:  
        - name: book-mssql
          mountPath: /var/opt/mssql/data
      volumes:     
      - name: book-mssql
        persistentVolumeClaim:
          claimName: book-mssql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: book-mssql-clusterip
spec:
  type: ClusterIP
  selector:
    app: bookmssql
  ports:
    - port: 1433
      targetPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: book-mssql-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: bookmssql
  ports:
    - port: 1433
      targetPort: 1433
