MicroRabbit/microrabbitbooksapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: microrabbitbooksapi-deployment
   labels:
      app: booksapi
spec:
   replicas: 1
   selector:
      matchLabels:
         app: booksapi
   template:
      metadata:
         labels:
            app: booksapi
      spec:
         containers:
            - name:  microrabbitbooksapi
              image: tamarabinnun/microrabbitbooksapi
              ports:
              - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
   name: microrabbitbooksapi-nodeport
spec:
   type: NodePort
   ports:
      - port: 80
        targetPort: 80   
        nodePort: 30000
   selector:
      app: booksapi
