MicroRabbit/microrabbitordersapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: microrabbitordersapi-deployment
   labels:
      app: ordersapi
spec:
   replicas: 1
   selector:
      matchLabels:
         app: ordersapi
   template:
      metadata:
         labels:
            app: ordersapi
      spec:
         containers:
            - name:  microrabbitordersapi
              image: tamarabinnun/microrabbitordersapi
              ports:
              - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
   name: microrabbitordersapi-nodeport
spec:
   type: NodePort
   ports:
      - port: 80
        targetPort: 80   
        nodePort: 30000
   selector:
      app: ordersapi
---
apiVersion: v1
kind: Service
metadata:
   name: microrabbitordersapi-clusterip
spec:
   type: ClusterIP
   ports:
      - port: 80
        targetPort: 80
   selector:
      app: ordersapi
