MicroRabbit/order-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: order-api-deployment
   labels:
      app: orderapi
spec:
   replicas: 1
   selector:
      matchLabels:
         app: orderapi
   template:
      metadata:
         labels:
            app: orderapi
      spec:
         containers:
            - name:  microrabbitordersapi
              image: tamarabinnun/microrabbitordersapi
              ports:
              - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
   name: order-api-nodeport
spec:
   type: NodePort
   ports:
      - port: 80
        targetPort: 80   
        nodePort: 30001
   selector:
      app: orderapi
---
apiVersion: v1
kind: Service
metadata:
   name: order-api-clusterip
spec:
   type: ClusterIP
   ports:
      - port: 80
        targetPort: 80
   selector:
      app: orderapi
