MicroRabbit/order-mssql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-mssql-deployment
  labels:
    app: ordermssql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ordermssql
  template:
    metadata:
      labels:
        app: ordermssql
    spec:
      containers:
      - name: mssql
        image: mcr.microsoft.com/mssql/server:2022-latest #creating a container from this image, with empty data. server name:"localhost,1433"
        ports:
        - containerPort: 1433
        volumeMounts:  
        - name: order-mssql
          mountPath: /var/opt/mssql/orderdata
      volumes:   
      - name: order-mssql
        persistentVolumeClaim:
          claimName: order-mssql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: order-mssql-clusterip
spec:
  type: ClusterIP
  selector:
    app: ordermssql
  ports:
    - port: 1433
      targetPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: order-mssql-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: ordermssql
  ports:
    - port: 1433
      targetPort: 1433
