MicroRabbit/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: rabbitmq-deployment
   labels:
      app: rabbitmq
spec:
   replicas: 1
   selector:
      matchLabels:
         app: rabbitmq
   template:
      metadata:
         labels:
            app: rabbitmq
      spec:
         containers:
            - name:  rabbitmq
              image: rabbitmq:3.13.0-rc.2-management
              ports:
              - name: management-port
                containerPort: 15672
              - name: internal-port
                containerPort: 5672
---
apiVersion: v1
kind: Service
metadata:
   name: rabbitmq-loadbalancer
spec:
   type: LoadBalancer
   ports:
      - name: management-port
        port: 15677
        targetPort: 15672
      - name: internal-port
        port: 5677
        targetPort: 5672    
   selector:
      app: rabbitmq
---
apiVersion: v1
kind: Service
metadata:
   name: rabbitmq-clusterip
spec:
   type: ClusterIP
   ports:
      - name: management-port
        port: 15677
        targetPort: 15672
      - name: internal-port
        port: 5677
        targetPort: 5672       
   selector:
      app: rabbitmq
