MicroRabbit/rabbitmq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: rabbitmq-ingress-class
  rules:
  - host: books.co.il
    http:
      paths:
      - pathType: Prefix
        path: /api/books
        backend:
          service:
            name: book-api-clusterip
            port:
              number: 80
  - host: orders.co.il
    http:
      paths:
      - pathType: Prefix
        path: /api/orders
        backend:
          service:
            name: order-api-clusterip
            port:
              number: 80
      - pathType: Prefix
        path: /api/books
        backend:
          service:
            name: order-api-clusterip
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: rabbitmq-ingress-class
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx
